--- a/Scss/styles.scss
+++ b/Scss/styles.scss
@@ -1,3 +1,5 @@
+
+
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;700;900&display=swap');
 
 body {
@@ -22,7 +24,8 @@ body {
   border: 1px solid hsl(176, 87%, 7%, 0.6);
   border-radius: 5px;
   box-shadow: inset 0 0 1px 1px hsl(204, 100%, 90%, 1), 10px 10px 60px 20px hsl(194, 100%, 9%, 0.5);
-  background: hsl(27, 10%, 90%, 0.9);
+  background: hsl(27, 10%, 90%, 0.5);
+  backdrop-filter: blur(35px) brightness(180%);
 }
 
 .hero__headline {
@@ -30,6 +33,13 @@ body {
   font-size: 4.5rem;
   line-height: 1.1;
   color: hsl(196, 100%, 15%);
+  color: transparent;
+
+  background-image: linear-gradient(
+    45deg, 
+    hsl(2, 90%, 35%), 
+    hsl(213, 75%, 40%));
+  background-clip: text;  
 }
 
 .hero__text {
@@ -47,11 +57,26 @@ body {
   font-size: 1.5rem;
   border-radius: 0.5rem;
   text-decoration: none;
-
   /* todo style */
   background-color: hsl(2, 70%, 45%);
   color: hsl(0, 0%, 100%);
-  background-image: linear-gradient(45deg, hls(211, 80%, 34%), hls(2, 70%, 40%));
+  background-image: linear-gradient(
+    45deg, 
+    hsl(213, 75%, 30%), 
+    hsl(2, 70%, 45%));
   transition: all 0.2s ease-in-out;
+
+  &:hover {
+    filter: brightness(120%);
+  }
 }
 
+@media(max-width: 800px) {
+  html {
+    font-size: 0.8rem;
+  }
+
+  .hero__headline {
+    font-size: 2.5rem;
+  }
+}
